--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = { version = "0.4.31", features = ["serde"] }
 dotenv = "0.15.0"
 futures-util = "0.3.30"
+lazy_static = "1.4.0"
 rust_decimal = "1.17.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
