--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -5,11 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+prost-build = "0.12.3"
+
 [dependencies]
+aws-sdk-kinesis = "1.9.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 dotenv = "0.15.0"
 futures-util = "0.3.30"
 lazy_static = "1.4.0"
+prost = "0.12.3"
+prost-types = "0.12.3"
 rust_decimal = "1.17.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
