--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -9,11 +9,13 @@ edition = "2021"
 prost-build = "0.12.3"
 
 [dependencies]
+aws-config = "1.1.1"
 aws-sdk-kinesis = "1.9.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 dotenv = "0.15.0"
 futures-util = "0.3.30"
 lazy_static = "1.4.0"
+once_cell = "1.19.0"
 prost = "0.12.3"
 prost-types = "0.12.3"
 rust_decimal = "1.17.0"
