--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -22,6 +22,7 @@ prost-types = "0.12.3"
 rust_decimal = "1.17.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+signal-hook = "0.3.9"
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-tungstenite = { version = "*", features = ["tls"] }
 tungstenite = "0.21.0"
