--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -3,17 +3,15 @@ name = "ingest"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [build-dependencies]
 prost-build = "0.12.3"
 
 [dependencies]
+actix-web = "4"
 aws-config = "1.1.1"
 aws-sdk-kinesis = "1.9.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 config = "0.13.4"
-dotenv = "0.15.0"
 futures-util = "0.3.30"
 lazy_static = "1.4.0"
 once_cell = "1.19.0"
