--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
+		"@types/d3": "^7.4.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -34,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@urql/svelte": "^4.0.4",
+		"d3": "^7.8.5",
 		"graphql": "^16.8.1",
 		"websocket": "^1.0.34"
 	}
