--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 async-graphql = "6.0.11"
-influxdb_rs = "0.2.1"
+chrono = { version = "0.4.31", features = ["serde"] }
+influxdb2 = "0.3"
+influxdb2-structmap = "0.2"
+num-traits = "0.2"
 tokio = { version = "1.35.1", features = ["full"] }
 url = "2.5.0"
 warp = "0.3"
