--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
 		"@types/d3": "^7.4.3",
+		"@types/lodash": "^4.14.202",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -37,6 +38,7 @@
 		"@urql/svelte": "^4.0.4",
 		"d3": "^7.8.5",
 		"graphql": "^16.8.1",
+		"lodash": "^4.17.21",
 		"websocket": "^1.0.34"
 	}
 }
