--- a/infra/package.json
+++ b/infra/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infra",
+  "name": "control-tower-infra",
   "version": "0.1.0",
   "bin": {
     "infra": "bin/infra.js"
@@ -12,18 +12,17 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
-    "@types/node": "20.10.4",
-    "aws-cdk": "2.117.0",
+    "@types/node": "20.11.5",
+    "aws-cdk": "2.122.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.117.0",
-    "aws-lambda": "^1.0.7",
+    "aws-cdk-lib": "2.122.0",
     "constructs": "^10.0.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.2",
     "source-map-support": "^0.5.21"
   }
 }
