--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 prost-build = "0.12.3"
 
 [dependencies]
-actix-web = "4"
 aws-config = "1.1.1"
 aws-sdk-kinesis = "1.9.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 config = "0.13.4"
+env_logger = "0.9.0"
 futures-util = "0.3.30"
 lazy_static = "1.4.0"
+log = "0.4"
 once_cell = "1.19.0"
 prost = "0.12.3"
 prost-types = "0.12.3"
@@ -25,3 +26,4 @@ tokio = { version = "1.35.1", features = ["full"] }
 tokio-tungstenite = { version = "*", features = ["tls"] }
 tungstenite = "0.21.0"
 url = "2.5.0"
+warp = "0.3"
