--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 async-graphql = "6.0.11"
 chrono = { version = "0.4.31", features = ["serde"] }
+env_logger = "0.9.0"
 influxdb2 = "0.3"
 influxdb2-structmap = "0.2"
+log = "0.4"
 num-traits = "0.2"
 tokio = { version = "1.35.1", features = ["full"] }
 url = "2.5.0"
