--- a/lambdas/results_stream_pusher/package.json
+++ b/lambdas/results_stream_pusher/package.json
@@ -13,12 +13,14 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.131",
     "@types/node": "^20.10.8",
+    "@types/pako": "^2.0.3",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.485.0",
     "@aws-sdk/client-dynamodb": "^3.485.0",
     "deploy": "^1.0.3",
+    "pako": "^2.1.0",
     "tsconfig.json": "^1.0.11"
   }
 }
