--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,6 +20,7 @@
         "@types/d3": "^7.4.3",
         "@types/lodash": "^4.14.202",
         "@types/lodash.camelcase": "^4.3.9",
+        "@types/pako": "^2.0.3",
         "@typescript-eslint/eslint-plugin": "^5.45.0",
         "@typescript-eslint/parser": "^5.45.0",
         "eslint": "^8.28.0",
@@ -42,6 +43,7 @@
         "graphql-request": "^6.1.0",
         "lodash": "^4.17.21",
         "lodash.camelcase": "^4.3.0",
+        "pako": "^2.1.0",
         "websocket": "^1.0.34"
     }
 }
