analytics - slim down container a bit

--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:11.0.17
+FROM amazoncorretto:11.0.17 as builder
 
 WORKDIR /app
 
@@ -8,4 +8,12 @@ COPY target/universal/analytics-0.1.zip .
 
 RUN unzip analytics-0.1.zip
 
-ENTRYPOINT ["./analytics-0.1/bin/analytics"]
+FROM amazoncorretto:11-alpine
+
+WORKDIR /app
+
+RUN apk add --no-cache bash libstdc++
+
+COPY --from=builder /app/analytics-0.1 /analytics-0.1
+
+ENTRYPOINT ["/analytics-0.1/bin/analytics"]
