analytics - tweak window params

--- a/analytics/src/main/resources/application.conf
+++ b/analytics/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 sliding_window_5min {
     watermark {
-        due_time: 11m
-        idle_patience: 3m
+        due_time: 600s
+        idle_patience: 180s
     }
-    window_period_length: 10m
-    window_interval: 5m
+    window_period_length: 420s
+    window_interval: 210s
 }
