influxdb - trim dockerfile

--- a/persistence/influxdb/Dockerfile
+++ b/persistence/influxdb/Dockerfile
@@ -1,4 +1,6 @@
 FROM influxdb:2.0
 
-RUN apt-get update && apt-get install -y python3-pip
-RUN pip3 install botocore
+RUN apt-get update && \
+    apt-get install -y python3-pip && \
+    pip3 install botocore && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
