--- a/.github/workflows/ci-ingest.yaml
+++ b/.github/workflows/ci-ingest.yaml
@@ -51,14 +51,11 @@ jobs:
         with:
           mask-password: true
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Build, tag, and push image to Amazon ECR
         run: |
           cd ingest
-          docker buildx create --use
-          docker buildx build --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --push
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         env:
           ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
           ECR_REPOSITORY: control-tower-ingest
