--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4"
 once_cell = "1.19.0"
 prost = "0.12.3"
 prost-types = "0.12.3"
+rand = "0.8.4"
 rust_decimal = "1.17.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
