--- a/.github/workflows/ci-analytics.yaml
+++ b/.github/workflows/ci-analytics.yaml
@@ -1,4 +1,4 @@
-name: Control Tower Analytics CI/CD
+name: Stream Lines Compute CI/CD
 
 on:
   push:
@@ -44,5 +44,5 @@ jobs:
           docker buildx build --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --push
         env:
           ECR_REGISTRY: ${{ steps.aws-ecr.outputs.registry }}
-          ECR_REPOSITORY: control-tower-analytics
+          ECR_REPOSITORY: stream-lines-compute
           IMAGE_TAG: latest
