--- a/infra/package.json
+++ b/infra/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "control-tower-infra",
+  "name": "stream-lines-infra",
   "version": "0.1.0",
   "bin": {
     "infra": "bin/infra.js"
