retro - increase no of tickers to read

--- a/retro/src/main/resources/application.yml
+++ b/retro/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+spring:
+  config:
+    import: "tickers.yml"
+
 alpaca:
   authentication:
     api_key: ${ALPACA_API_KEY}
@@ -12,10 +16,3 @@ influxdb:
   organization: ${INFLUXDB_ORG}
   token: ${INFLUXDB_DAILY_BARS_TOKEN}
   url: http://localhost:8086
-
-tickers:
-  - AAPL
-  - MSFT
-  - GOOG
-  - AMZN
-  - TSLA
