--- a/currents/src/main/resources/application.conf
+++ b/currents/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 trend_discovery {
-    minimum_window: 7,
+    flink_window_count: 30,
+    minimum_trend_window: 7,
     regression_slope_threshold: 0.5,
     regression_variance_threshold: 0.7,
     tipping_point_threshold: 0.05,
