--- a/currents/src/main/resources/application.conf
+++ b/currents/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 trend_discovery {
     flink_window_count: 100,
     flink_window_interval: 30000,
-    minimum_trend_window: 7,
+    minimum_window: 7,
     regression_slope_threshold: 0.5,
-    regression_variance_threshold: 0.7,
+    regression_variance_limit: 3,
     tipping_point_threshold: 0.05,
 }
