gather - serve maintenance endpoints

--- a/gather/src/main/resources/application.yml
+++ b/gather/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   config:
-    import: "tickers.yml"
+    import:
+      - "tickers.yml"
+      - "security.yml"
 
 alpaca:
   authentication:
