currents - reset Drawdown state on full redo

--- a/currents/src/main/resources/application.conf
+++ b/currents/src/main/resources/application.conf
@@ -6,3 +6,5 @@ trend_discovery {
     regression_variance_limit: 8,
     tipping_point_threshold: 0.05,
 }
+
+alpaca.earliest_historical_date: "2016-01-04"
