currents - mv logic envs to application conf

--- a/currents/src/main/resources/application.conf
+++ b/currents/src/main/resources/application.conf
@@ -1,3 +1,13 @@
+alpaca.earliest_historical_date: "2016-01-04"
+
+source.runner {
+    nyse.extended.hours {
+        before.open: 4
+        after.close: 21
+    }
+    run.interval: "20min"
+}
+
 trend_discovery {
     flink_window_count: 100,
     flink_window_interval: 30000,
@@ -6,5 +16,3 @@ trend_discovery {
     regression_variance_limit: 8,
     tipping_point_threshold: 0.05,
 }
-
-alpaca.earliest_historical_date: "2016-01-04"
