gather - manually fetch fundamentals

--- a/gather/src/main/resources/source-data-params.yml
+++ b/gather/src/main/resources/source-data-params.yml
@@ -306,6 +306,8 @@ source-data-params:
   - market-data:
       ticker: FI
       company-name: "Fiserv, Inc."
+    fundamentals:
+      skip: true
 
   - market-data:
       ticker: FIS
