gather - improve validation

--- a/gather/src/main/resources/source-data-params.yml
+++ b/gather/src/main/resources/source-data-params.yml
@@ -181,6 +181,8 @@ source-data:
     - market-data:
         ticker: CEG
         company-name: "Constellation Energy Corporation"
+      fundamentals:
+        skip: true
 
     - market-data:
         ticker: CI
