--- a/gather/src/main/resources/source-data-params.yml
+++ b/gather/src/main/resources/source-data-params.yml
@@ -65,7 +65,7 @@ source-data:
         company-name: "Advanced Micro Devices, Inc."
 
     - market-data:
-        ticker: AMGM
+        ticker: AMGN
         company-name: "Amgen, Inc."
       fundamentals:
         skip: true
