--- a/ingest/Cargo.toml
+++ b/ingest/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 prost-build = "0.12.3"
 
 [dependencies]
+anyhow = "1.0.77"
 aws-config = "1.1.1"
 aws-sdk-kinesis = "1.9.0"
 chrono = { version = "0.4.31", features = ["serde"] }
@@ -19,6 +20,7 @@ once_cell = "1.19.0"
 prost = "0.12.3"
 prost-types = "0.12.3"
 rand = "0.8.4"
+reqwest = { version = "0.12.24", features = ["json"] }
 rust_decimal = "1.17.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
