ingest - update Dockerfile

--- a/ingest/Dockerfile
+++ b/ingest/Dockerfile
@@ -5,7 +5,6 @@ RUN cargo new --bin ingest
 WORKDIR /ingest
 
 COPY ./Cargo.lock ./Cargo.toml ./
-
 RUN cargo fetch
 
 COPY ./src ./src
@@ -13,11 +12,11 @@ COPY ./src ./src
 RUN rm -f ./target/release/deps/ingest* && \
     cargo build --release
 
-FROM debian:bullseye-20240211-slim
+# runtime
+FROM debian:bookworm-slim
 
-# OpenSSL
-RUN apt-get update &&  \
-    apt-get install -y libssl1.1 ca-certificates &&  \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends libssl3 ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /ingest/target/release/ingest .
