ripples - Update Dockerfile

--- a/ripples/Dockerfile
+++ b/ripples/Dockerfile
@@ -8,12 +8,10 @@ COPY target/universal/ripples-0.1.zip .
 
 RUN UNZIP_DISABLE_ZIPBOMB_DETECTION=true unzip -o ripples-0.1.zip
 
-FROM amazoncorretto:17-alpine
-
-WORKDIR /app
-
-RUN apk add --no-cache bash libstdc++
+FROM amazoncorretto:17.0.11
 
 COPY --from=builder /app/ripples-0.1 /ripples-0.1
 
-ENTRYPOINT ["/ripples-0.1/bin/ripples"]
+WORKDIR /ripples-0.1
+
+ENTRYPOINT ["java", "-cp", "lib/*:conf", "net.anzop.Ripples"]
