--- a/dashboard/.prettierrc
+++ b/dashboard/.prettierrc
@@ -1,10 +1,17 @@
 {
-    "tabWidth": 4,
-    "useSpaces": true,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "printWidth": 120,
-    "plugins": ["prettier-plugin-svelte"],
-    "pluginSearchDirs": ["."],
-    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "tabWidth": 2,
+  "useSpaces": true,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 120,
+  "plugins": ["prettier-plugin-svelte"],
+  "pluginSearchDirs": ["."],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
