--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,49 +1,55 @@
 {
-	"name": "dashboard",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "playwright test",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/kit": "^2.5.3",
-		"@types/d3": "^7.4.3",
-		"@types/lodash": "^4.14.202",
-		"@types/lodash.camelcase": "^4.3.9",
-		"@types/pako": "^2.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.6",
-		"svelte-preprocess": "^5.1.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.4.2",
-		"vite": "^5.1.5",
-		"vitest": "^0.25.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@urql/svelte": "^4.0.4",
-		"d3": "^7.8.5",
-		"dotenv": "^16.4.5",
-		"graphql": "^16.8.1",
-		"graphql-request": "^6.1.0",
-		"lodash": "^4.17.21",
-		"lodash.camelcase": "^4.3.0",
-		"pako": "^2.1.0",
-		"websocket": "^1.0.34"
-	}
+  "name": "dashboard",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "playwright test",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:unit": "vitest",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.28.1",
+    "@sveltejs/adapter-node": "^5.4.0",
+    "@sveltejs/kit": "^2.48.5",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@types/d3": "^7.4.3",
+    "@types/eslint__js": "^8.42.3",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.camelcase": "^4.3.9",
+    "@types/pako": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^3.13.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "svelte": "^5.2.7",
+    "svelte-check": "^3.6.6",
+    "svelte-eslint-parser": "^1.4.0",
+    "svelte-preprocess": "^6.0.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.4.2",
+    "vite": "^6.4.1",
+    "vitest": "^4.0.9"
+  },
+  "type": "module",
+  "dependencies": {
+    "@eslint/js": "^9.39.1",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "d3": "^7.8.5",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "lodash": "^4.17.21",
+    "lodash.camelcase": "^4.3.0",
+    "pako": "^2.1.0",
+    "websocket": "^1.0.34"
+  }
 }
