--- a/gather/src/main/resources/application.yml
+++ b/gather/src/main/resources/application.yml
@@ -2,7 +2,7 @@ alpaca:
   authentication:
     api_key: ${ALPACA_API_KEY}
     api_secret: ${ALPACA_API_SECRET}
-  bar_data_time_frame: 30Min
+  bar_data_time_frame: 1day
   daily_bars_url: "https://data.alpaca.markets/v2/stocks/bars"
   data_source: sip
   earliest_historical_date: 2016-01-02
