--- a/currents/Dockerfile
+++ b/currents/Dockerfile
@@ -6,14 +6,12 @@ RUN yum -y install unzip
 
 COPY target/universal/currents-0.1.zip .
 
-RUN unzip currents-0.1.zip
+RUN UNZIP_DISABLE_ZIPBOMB_DETECTION=true unzip -o currents-0.1.zip
 
-FROM amazoncorretto:17-alpine
-
-WORKDIR /app
-
-RUN apk add --no-cache bash libstdc++
+FROM amazoncorretto:17.0.11
 
 COPY --from=builder /app/currents-0.1 /currents-0.1
 
-ENTRYPOINT ["/currents-0.1/bin/currents"]
+WORKDIR /currents-0.1
+
+ENTRYPOINT ["java", "-cp", "lib/*:conf", "net.anzop.Currents"]
