--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-node": "^5.4.0",
+    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.48.5",
     "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@types/d3": "^7.4.3",
