--- a/infra/.prettierrc
+++ b/infra/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "tabWidth": 2,
-  "useSpaces": true,
+  "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "none"
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "useSpaces": true
 }
