--- a/infra/package.json
+++ b/infra/package.json
@@ -15,12 +15,14 @@
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "aws-cdk": "^2.1034.0",
+    "esbuild": "^0.27.1",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.952.0",
     "aws-cdk-lib": "^2.232.2",
     "constructs": "^10.4.4",
     "dotenv": "^16.3.2",
