--- a/infra/package.json
+++ b/infra/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.952.0",
+    "@aws-sdk/client-ecs": "^3.971.0",
     "aws-cdk-lib": "^2.232.2",
     "constructs": "^10.4.4",
     "dotenv": "^16.3.2",
