narwhal - make fastapi driven for now

--- a/narwhal/Dockerfile
+++ b/narwhal/Dockerfile
@@ -15,4 +15,4 @@ COPY src/ ./src/
 
 ENV PYTHONPATH=/app/src
 
-CMD ["python", "-m", "main"]
+CMD ["uvicorn", "narwhal.main:app", "--host", "0.0.0.0", "--port", "8000"]
