--- a/narwhal/pyproject.toml
+++ b/narwhal/pyproject.toml
@@ -5,7 +5,10 @@ requires-python = ">=3.11"
 
 dependencies = [
   "boto3==1.34.113",
+  "fastapi",
   "influxdb-client==1.42.0",
+  "uvicorn[standard]",
+  "xgboost==1.7.5",
 ]
 
 [project.optional-dependencies]
