infra - allow curl into service

--- a/gather/Dockerfile
+++ b/gather/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /app
 COPY build.gradle.kts settings.gradle.kts gradle.properties ./
 COPY gradle ./gradle
 COPY gradlew ./
-
 COPY src ./src
 
 RUN ./gradlew bootJar --no-daemon
@@ -13,6 +12,11 @@ RUN ./gradlew bootJar --no-daemon
 FROM eclipse-temurin:17-jre
 
 WORKDIR /app
+
+# safely curl service in private subnet
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends curl \
+ && rm -rf /var/lib/apt/lists/*
 
 COPY --from=build /app/build/libs/*.jar app.jar
 
