--- a/infra/package.json
+++ b/infra/package.json
@@ -11,10 +11,11 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.161",
     "@types/node": "20.11.5",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
-    "aws-cdk": "^2.1034.0",
+    "aws-cdk": "^2.1108.0",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
@@ -24,6 +25,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.952.0",
     "@aws-sdk/client-ecs": "^3.971.0",
+    "@aws-sdk/client-s3": "^3.998.0",
     "aws-cdk-lib": "^2.232.2",
     "constructs": "^10.4.4",
     "dotenv": "^16.3.2",
