--- a/narwhal/pyproject.toml
+++ b/narwhal/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.11"
 
 dependencies = [
+  "apscheduler==3.10.1",
   "boto3==1.34.113",
   "fastapi",
   "influxdb-client==1.42.0",
@@ -18,7 +19,7 @@ dev = [
 ]
 
 [tool.mypy]
-exclude = "(^venv/|^\\.venv/)"
+exclude = ["(^venv/|^\\.venv/)", "build/", "dist/"]
 files = ["src"]
 strict = true
 
@@ -27,6 +28,7 @@ disable_error_code = ["import-untyped"]
 ignore_missing_imports = true
 module = [
   "influxdb_client.*",
+  "apscheduler.*",
 ]
 
 [tool.ruff]
